--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "map-pac-location",
+  "name": "map-pac-sell-auth",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,8 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "firebase": "^10.0.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
