--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "map-pac-donner-corrige",
+  "name": "map-pac-complet",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,13 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
